--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
 </head>
 
 <h2>
+  Goals and Deliverables
+</h2>
+<h3>
+  What we are trying to accomplish?
+</h3> 
+<p>
+  We want to implement different remeshing methods including Isotropic remeshing and Anisotropic remeshing and also
+  try alternate subdivision schemes like Butterfly scheme and Catmull-Clark.
+</p>
+<h3>
+  What results are we going for?
+</h3>
+<p>
+  We'd like to use same mesh to produce multiple images using different methods mentioned above to see the
+  different effects these methods have on images. If have time, we might also want to increase the performace of remeshing and subdivision.
+</p>
+<h3>
+  Why we think we can accomplish those goals?
+</h3>
+<p>
+  We found multiple papers and slides that can help us with the different remeshing and subdivision methods. We believe with the help
+  of course material and previous homework, we will be able to accomplish these goals.
+</p>
+  
+<h2>
     Schedule
 </h2>
 <p>
@@ -41,14 +66,14 @@
 </h2>
 <p>
     • Textbook: Chapter 6<br>
-• Alliez et al, “Interactive geometry remeshing”, SIGGRAPH 2002<br>
-• Alliez et al, “Isotropic surface remeshing”, SMI 2003<br>
-• Alliez et al, “Anisotropic polygonal remeshing”, SIGGRAPH 2003<br>
-• Vorsatz et al, “Dynamic remeshing and applications”, Solid Modeling 2003<br>
-• Botsch & Kobbelt, “A remeshing approach to multiresolution modeling”,
-Symp. on Geometry Processing 2004<br>
-• Marinov et al, “Direct anisotropic quad-dominant remeshing”, Pacific
-Graphics 2004<br>
-• Alliez et al, “Recent advances in remeshing of surfaces”, AIM@Shape
-state of the art report, 2006<br>
+    • Alliez et al, “Interactive geometry remeshing”, SIGGRAPH 2002<br>
+    • Alliez et al, “Isotropic surface remeshing”, SMI 2003<br>
+    • Alliez et al, “Anisotropic polygonal remeshing”, SIGGRAPH 2003<br>
+    • Vorsatz et al, “Dynamic remeshing and applications”, Solid Modeling 2003<br>
+    • Botsch & Kobbelt, “A remeshing approach to multiresolution modeling”,
+    Symp. on Geometry Processing 2004<br>
+    • Marinov et al, “Direct anisotropic quad-dominant remeshing”, Pacific
+    Graphics 2004<br>
+    • Alliez et al, “Recent advances in remeshing of surfaces”, AIM@Shape
+    state of the art report, 2006<br>
 </p>
