--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
 </head>
 
+<body>
+<h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2024</h1>
+<h1 align="middle">Final Project</h1>
+<h2 align="middle">Angel Tu, Youxun Liu, Jiacheng Song, and </h2>
+  
 <h2>
   Goals and Deliverables
 </h2>
@@ -77,3 +82,6 @@
     • Alliez et al, “Recent advances in remeshing of surfaces”, AIM@Shape
     state of the art report, 2006<br>
 </p>
+
+</body>
+</html>  
