--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2024</h1>
 <h1 align="middle">Final Project</h1>
 <h2 align="middle">Angel Tu, Youxun Liu, Jiacheng Song, and </h2>
-  
+
+<div>
 <h2>
   Goals and Deliverables
 </h2>
@@ -49,7 +50,9 @@
   We found multiple papers and slides that can help us with the different remeshing and subdivision methods. We believe with the help
   of course material and previous homework, we will be able to accomplish these goals.
 </p>
-  
+</div>
+
+<div>
 <h2>
     Schedule
 </h2>
@@ -65,7 +68,9 @@
     • 4/28-29 final deliverables<br>
     • 4/30 Final Deliverables (Report & Video) Due<br>
 </p>
+</div>
 
+<div>  
 <h2>
     Resources
 </h2>
@@ -82,6 +87,7 @@
     • Alliez et al, “Recent advances in remeshing of surfaces”, AIM@Shape
     state of the art report, 2006<br>
 </p>
+</div>
 
 </body>
 </html>  
