--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 </h2>
 <p>
     • 4/2 Proposal due<br>
-    • 4/3-4/7Literature Review<br>
-    • 4/8-4/12 Implements local remeshing operators and incremental remeshing<br>
-    • 4/13-4/14 Add adaptive remeshing and feature preservation<br>
+    • 4/3-4/7Remeshing Literature review<br>
+    • 4/8-4/11 Implements local remeshing operators and incremental remeshing<br>
+    • 4/12-4/14 Variational remeshing<br>
     • 4/15 Milestone deliverable<br>
     • 4/16 Graded Milestone Due”<br>
-    • 4/17-4/23 Variational remeshing<br>
-    • 4/24-27 adaptive remeshing support for Variational remeshing<br>
+    • 4/17-4/20 Subdivision literature Review<br>
+    • 4/21-27 remeshing<br>
     • 4/28-29 final deliverables<br>
     • 4/30 Final Deliverables (Report & Video) Due<br>
 </p>
