Update index.html yoxuun

--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
   We found multiple papers and slides that can help us with the different remeshing and subdivision methods. We believe with the help
   of course material and previous homework, we will be able to accomplish these goals.
 </p>
+<h3>
+  How do we measure the quality/performance?
+</h3>
+<p>
+  Couple factors about mesh Quality that we would look at are “Area ratio”: length ratio between the longest edge and shortest edge. 
+  “Angle skew”: angles within the triangle mesh must tend to have a normal distribution. “Element Area”: mesh area must also tend to have 
+  a reasonable normal distribution based on function’s input. We check if the rendered image satisfy our input to the image. 
+</p> 
+<h3>
+  Questions we plan to answer.
+</h3>
+  <p>
+    We would explain how we implement each feature, and how each feature work together to get to our desired result. In order to express the changes on each features, 
+    we would render images that used different combinations of our features and compare them to our preprocessed image.
+  </p>
+<h3>
+    Plans/Goals
+</h3>
+  <p>1.We would have a good model that can work on different complexity of geometry shapes. Cow for simple, teapot for medium, and face/dragon for complex. And the run time of features would grow in linear in respect to the complexity of the geometry.
+</p>
+  <p>2.If we are very ahead on the schedule, we may dive deep into algorithm runtime optimizations.</p>
 </div>
 
 <div>
