--- a/website/milestone.html
+++ b/website/milestone.html
@@ -27,17 +27,28 @@
 
 <div>
 <h2>
-  Summarize what we have accomplished
+  Overview
 </h2>
 <p>
-  We have completed implementation for butterfly subdivision shceme.
+  In this project, we plan to explore different subdivision schemes and remeshing. So far, 
+  we have implementated the modified butterfly subdivision shceme.
 </p>
 
 <h2>
   Preliminary results
 </h2>
+<h3>
+  Modified Butterfly Subdivision Scheme
+</h3>
 <p>
   blablabla
+</p>
+
+<h3>
+  Remeshing
+</h3>
+<p>
+  Describe here
 </p>
   
 <h2>
