--- a/website/milestone.html
+++ b/website/milestone.html
@@ -41,7 +41,20 @@
   Modified Butterfly Subdivision Scheme
 </h3>
 <p>
-  blablabla
+  When we implement butterfly scheme, we computes a new scalar value for each edge midpoint of the triangulation with four 
+  distinguish cases.
+</p>
+<p>
+  Case 1: The edge connects two vertices of valence 6
+</p>
+<p>
+  Case 2: The edge connects a K-vertex (K != 6) and a 6-vertex
+</p>
+<p>
+  Case 3: The edge connects two extraordinary vertices
+</p>
+<p>
+  Case 4: Boundary Edges
 </p>
 
 <h3>
