--- a/website/milestone.html
+++ b/website/milestone.html
@@ -45,16 +45,21 @@
   distinguish cases.
 </p>
 <p>
-  Case 1: The edge connects two vertices of valence 6
+  Case 1: The edge connects two vertices of valence 6. We calculate weighted position of the new vertex
+  according to the following graph with a, b, c, and d representing different weights
+  <img src="images/butterfly_scheme_1" align="middle" width="400px"/>
 </p>
 <p>
-  Case 2: The edge connects a K-vertex (K != 6) and a 6-vertex
+  Case 2: The edge connects a K-vertex (K != 6) and a 6-vertex. We calculate weighted position of the new vertex
+  according to the following graph with s0 to sj representing different weights depending on the value of K.
+  <img src="images/butterfly_scheme_2" align="middle" width="400px"/>
 </p>
 <p>
-  Case 3: The edge connects two extraordinary vertices
+  Case 3: The edge connects two extraordinary vertices. In this case, we take the average of the values computed using the 
+  method shown on case 2.
 </p>
 <p>
-  Case 4: Boundary Edges
+  Case 4: Boundary Edges. In this case, we calculate the position of the new vertex using the 1-dimensional 4 point scheme.
 </p>
 
 <h3>
@@ -68,14 +73,14 @@
   Reflect on progress relative to our plan
 </h2>
 <p>
-  blablabla
+  Our progress matches our plan
 </p>
   
 <h2>
   Update our work plan
 </h2>
 <p>
-  ablablabla
+  Answer here
 </p>
 
 </div>
