--- a/website/milestone.html
+++ b/website/milestone.html
@@ -47,13 +47,13 @@
 <p>
   Case 1: The edge connects two vertices of valence 6. We calculate weighted position of the new vertex
   according to the following graph with a, b, c, and d representing different weights
-  <img src="images/butterfly_scheme_1" align="middle" width="400px"/>
 </p>
+  <img src="images/butterfly_scheme_1.png" align="middle" width="400px"/>
 <p>
   Case 2: The edge connects a K-vertex (K != 6) and a 6-vertex. We calculate weighted position of the new vertex
   according to the following graph with s0 to sj representing different weights depending on the value of K.
-  <img src="images/butterfly_scheme_2" align="middle" width="400px"/>
 </p>
+  <img src="images/butterfly_scheme_2.png" align="middle" width="400px"/>
 <p>
   Case 3: The edge connects two extraordinary vertices. In this case, we take the average of the values computed using the 
   method shown on case 2.
