--- a/website/milestone.html
+++ b/website/milestone.html
@@ -61,6 +61,13 @@
 <p>
   Case 4: Boundary Edges. In this case, we calculate the position of the new vertex using the 1-dimensional 4 point scheme.
 </p>
+<h4>
+  Video
+</h4>
+<video width="640" height="360" controls>
+  <source src="images/bandicam 2024-04-16 18-46-21-521.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 <h3>
   Remeshing
