--- a/website/milestone.html
+++ b/website/milestone.html
@@ -87,7 +87,10 @@
   Update our work plan
 </h2>
 <p>
-  Answer here
+    • 4/17-4/20 Subdivision literature Review<br>
+    • 4/21-27 remeshing<br>
+    • 4/28-29 final deliverables<br>
+    • 4/30 Final Deliverables (Report & Video) Due<br>
 </p>
 
 </div>
