--- a/website/milestone.html
+++ b/website/milestone.html
@@ -24,6 +24,7 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2024</h1>
 <h1 align="middle">Final Project: Mesh regularization & multiple Subdivision Schemes</h1>
 <h2 align="middle">Angel Tu, Youxun Liu, Jiacheng Song, and Zhen Fu</h2>
+<h2 align="middle">Slides URL: <a href="https://docs.google.com/presentation/d/1e0tIkZtQ42brzklOMBHkXxpnOtOaYnOC0PyboJF8Lvo/edit#slide=id.g2cd05034f62_0_57">https://docs.google.com/presentation/d/1e0tIkZtQ42brzklOMBHkXxpnOtOaYnOC0PyboJF8Lvo/edit#slide=id.g2cd05034f62_0_57</a></h2>
 
 <div>
 <h2>
