--- a/website/milestone.html
+++ b/website/milestone.html
@@ -31,7 +31,8 @@
 </h2>
 <p>
   In this project, we plan to explore different subdivision schemes and remeshing. So far, 
-  we have implementated the modified butterfly subdivision shceme.
+  we have implementated the modified butterfly subdivision shceme. And we implemented collapse 
+  and shifting procedure of remeshing.
 </p>
 
 <h2>
@@ -73,14 +74,22 @@
   Remeshing
 </h3>
 <p>
-  Describe here
+  For remeshing, the standard procedure for the mesh is looping these 5 steps: Spliting, Collapsing, Flipping, vertex shifting, and projection.
+  We continue from where we left off on homework 2, we wrote the sub-procedure of shifting and collapse. We are currently trying to explore our 
+  scheme in looping all elements in a Mesh.
 </p>
+
+
+<video width="640" height="360" controls>
+  <source src="remeshing_progress.mov" type="video/mov">
+  
+</video>
   
 <h2>
   Reflect on progress relative to our plan
 </h2>
 <p>
-  Our progress matches our plan
+  Our progress matches our plan.
 </p>
   
 <h2>
