--- a/website/milestone.html
+++ b/website/milestone.html
@@ -79,6 +79,13 @@
   scheme in looping all elements in a Mesh.
 </p>
 
+<p>Collapsing: </p>
+<img src="images/collapsebefore.png" align="middle" width="400px"/>
+<img src="images/collapseafter.png" align="middle" width="400px"/>
+
+<p>Shifting: </p>
+<img src="images/shiftbefore.png" align="middle" width="400px"/>
+<img src="images/shiftafter.png" align="middle" width="400px"/>
 
 <video width="640" height="360" controls>
   <source src="remeshing_progress.mov" type="video/mov">
