--- a/website/milestone.html
+++ b/website/milestone.html
@@ -89,7 +89,7 @@
 <img src="images/shiftafter.png" align="middle" width="400px"/>
 
 <video width="640" height="360" controls>
-  <source src="remeshing_progress.mp4" type="video/mp4">
+  <source src="images/remeshing_progress.mp4" type="video/mp4">
   
 </video>
   
