--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<a href="/website/proposal.html">Proposal Website</a>
 		<br><br>
 		<a href="/website/milestone.html">Milestone Status Report Webpage</a>
+    <br><br>
+		<a href="/website/final_report.html">Final Report Webpage</a>
 	</body>
 	<script>
 		var links = document.body.getElementsByTagName("a")
