--- a/website/final_report.html
+++ b/website/final_report.html
@@ -24,7 +24,7 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2024</h1>
 <h1 align="middle">Final Project: Mesh regularization & multiple Subdivision Schemes</h1>
 <h2 align="middle">Angel Tu, Youxun Liu, Jiacheng Song, and Zhen Fu</h2>
-<h3 align="middle">Slides URL: <a href="https://docs.google.com/presentation/d/1e0tIkZtQ42brzklOMBHkXxpnOtOaYnOC0PyboJF8Lvo/edit#slide=id.p">Presentation Slides</a></h3>
+<h3 align="middle">Slides URL: <a href="https://docs.google.com/presentation/d/1YEAIZIN_bEHoWQ-1oPEwJirgfHX6pgFTiNNci4pdx8c/edit#slide=id.g2d0cdcd6308_0_74">Presentation Slides</a></h3>
 
 <div>
 <h2>
@@ -32,7 +32,7 @@
 </h2>
 <p>
     In this project, we explored different subdivision schemes and remeshing. 
-    We implementated the modified butterfly subdivision shceme and the sqrt 3 subdivision. 
+    We implemented the modified butterfly subdivision scheme and the sqrt 3 subdivision. 
     We also implemented collapse and shifting procedure of remeshing.
 </p>
 
