--- a/website/final_report.html
+++ b/website/final_report.html
@@ -107,13 +107,40 @@
 </p>
 
 <p>Collapsing: </p>
-<img src="images/collapsebefore.png" align="middle" width="400px"/>
-<img src="images/collapseafter.png" align="middle" width="400px"/>
+    <div align="middle">
+      <table>
+        <tr align="middle">
+          <td>
+            <img src="images/collapsebefore.png" align="middle" width="400px"/>
+            <figcaption align="middle">before</figcaption>
+          </td>
+          <td>
+            <img src="images/collapseafter.png" align="middle" width="400px"/>
+            <figcaption align="middle">after</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
 
 <p>Shifting: </p>
-<img src="images/shiftbefore.png" align="middle" width="400px"/>
-<img src="images/shiftafter.png" align="middle" width="400px"/>
+    <div align="middle">
+      <table>
+        <tr align="middle">
+          <td>
+            <img src="images/shiftbefore.png" align="middle" width="400px"/>
+            <figcaption align="middle">before</figcaption>
+          </td>
+          <td>
+            <img src="images/shiftafter.png" align="middle" width="400px"/>
+            <figcaption align="middle">after</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
 
+<h4>
+    Video
+</h4>
 <video width="640" height="360" controls>
     <source src="images/remeshing_progress.mp4" type="video/mp4">
 </video>
