--- a/website/final_report.html
+++ b/website/final_report.html
@@ -63,13 +63,6 @@
 <p>
     Case 4: Boundary Edges. In this case, we calculate the position of the new vertex using the 1-dimensional 4 point scheme.
 </p>
-<h4>
-    Video
-</h4>
-<video width="640" height="360" controls>
-    <source src="images/bandicam 2024-04-16 18-46-21-521.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
 
 <h3>
     Sqrt3-Subdivision Scheme
@@ -105,8 +98,46 @@
     Finally, we loop through Spliting, Collapsing, Flipping, vertex shifting, and projection to get our remeshed result. Unfortunately, there might still be some bugs
     in our remeshing function so the mesh looks kind of strange after remeshing. We will try to fix it later.<br>
 </p>
+  
+<h2>
+    Results
+</h2>
+<h3>
+    Subdivision
+</h3>
+<h4>
+    Modified Butterfly Subdivision Scheme
+</h4>
+<h4>
+    Video
+</h4>
+<video width="640" height="360" controls>
+    <source src="images/bandicam 2024-04-16 18-46-21-521.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+<h4>
+    Sqrt3-Subdivision Scheme
+</h4>
+    <div align="middle">
+      <tabe>
+        <tr align="middle">
+          <td>
+            <img src="images/sqrt3_3.png" align="middle" width="400px"/>
+            <figcaption align="middle">before</figcaption>
+          </td>
+          <td>
+            <img src="images/sqrt3_4.png" align="middle" width="400px"/>
+            <figcaption align="middle">after</figcaption>
+          </td>
+        </tr>
+      </table>
+    </div>
 
-<p>Collapsing: </p>
+    
+<h3>
+    Remeshing
+</h3>
+<h4> Collapsing: </h4>
     <div align="middle">
       <table>
         <tr align="middle">
@@ -122,7 +153,7 @@
       </table>
     </div>
 
-<p>Shifting: </p>
+<h4> Shifting: </h4>
     <div align="middle">
       <table>
         <tr align="middle">
@@ -144,13 +175,7 @@
 <video width="640" height="360" controls>
     <source src="images/remeshing_progress.mp4" type="video/mp4">
 </video>
-  
-<h2>
-    Results
-</h2>
-<p>
     
-</p>
   
 <h2>
     References
@@ -164,7 +189,7 @@
     Contributions from each team member
 </h2>
 <p>
-    • Angel Tu: <br>
+    • Angel Tu: Modified Butterfly Subdivision Scheme, websites, and slides. <br>
     • Jiacheng Song: <br>
     • Youxun Liu: <br>
     • Zhen Fu: <br>
