--- a/website/final_report.html
+++ b/website/final_report.html
@@ -113,6 +113,102 @@
 <h4>
     Modified Butterfly Subdivision Scheme
 </h4>
+    <div align="middle">
+        <table>
+            <tr align="middle">
+            <td>
+                <img src="images/butterfly_1_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 1 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_1_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 1 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_2_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 2 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_2_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 2 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_5_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 5 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/butterfly_1_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Butterfly Level 5 Teapot</figcaption>
+            </td>
+            </tr>
+        </table>
+    </div>
+<h4>
+    Sqrt3-Subdivision Scheme
+</h4>
+    <div align="middle">
+        <table>
+            <tr align="middle">
+            <td>
+                <img src="images/sqrt3_1_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 1 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_1_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 1 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_2_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 2 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_2_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 2 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_5_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 5 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/sqrt3_5_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Sqrt3 Level 5 Teapot</figcaption>
+            </td>
+            </tr>
+        </table>
+    </div>
+<h4>
+    Loop Subdivision
+</h4>
+    <div align="middle">
+        <table>
+            <tr align="middle">
+            <td>
+                <img src="images/loop_1_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 1 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/loop_1_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 1 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/loop_2_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 2 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/loop_2_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 2 Teapot</figcaption>
+            </td>
+            <td>
+                <img src="images/loop_5_cube" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 5 Cube</figcaption>
+            </td>
+            <td>
+                <img src="images/loop_5_teapot" align="middle" width="400px"/>
+                <figcaption align="middle">Loop Level 5 Teapot</figcaption>
+            </td>
+            </tr>
+        </table>
+    </div>
 <h4>
     Video
 </h4>
@@ -122,25 +218,6 @@
     </video>
 </div>
 
-<h4>
-    Sqrt3-Subdivision Scheme
-</h4>
-    <div align="middle">
-      <tabe>
-        <tr align="middle">
-          <td>
-            <img src="images/sqrt3_3.png" align="middle" width="400px"/>
-            <figcaption align="middle">before</figcaption>
-          </td>
-          <td>
-            <img src="images/sqrt3_4.png" align="middle" width="400px"/>
-            <figcaption align="middle">after</figcaption>
-          </td>
-        </tr>
-      </table>
-    </div>
-
-    
 <h3>
     Remeshing
 </h3>
