--- a/website/final_report.html
+++ b/website/final_report.html
@@ -117,27 +117,27 @@
         <table>
             <tr align="middle">
             <td>
-                <img src="images/butterfly_1_cube" align="middle" width="400px"/>
+                <img src="images/butterfly_1_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 1 Cube</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_1_teapot" align="middle" width="400px"/>
+                <img src="images/butterfly_1_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 1 Teapot</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_2_cube" align="middle" width="400px"/>
+                <img src="images/butterfly_2_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 2 Cube</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_2_teapot" align="middle" width="400px"/>
+                <img src="images/butterfly_2_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 2 Teapot</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_5_cube" align="middle" width="400px"/>
+                <img src="images/butterfly_5_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 5 Cube</figcaption>
             </td>
             <td>
-                <img src="images/butterfly_1_teapot" align="middle" width="400px"/>
+                <img src="images/butterfly_1_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Butterfly Level 5 Teapot</figcaption>
             </td>
             </tr>
@@ -150,27 +150,27 @@
         <table>
             <tr align="middle">
             <td>
-                <img src="images/sqrt3_1_cube" align="middle" width="400px"/>
+                <img src="images/sqrt3_1_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 1 Cube</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_1_teapot" align="middle" width="400px"/>
+                <img src="images/sqrt3_1_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 1 Teapot</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_2_cube" align="middle" width="400px"/>
+                <img src="images/sqrt3_2_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 2 Cube</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_2_teapot" align="middle" width="400px"/>
+                <img src="images/sqrt3_2_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 2 Teapot</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_5_cube" align="middle" width="400px"/>
+                <img src="images/sqrt3_5_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 5 Cube</figcaption>
             </td>
             <td>
-                <img src="images/sqrt3_5_teapot" align="middle" width="400px"/>
+                <img src="images/sqrt3_5_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Sqrt3 Level 5 Teapot</figcaption>
             </td>
             </tr>
@@ -183,27 +183,27 @@
         <table>
             <tr align="middle">
             <td>
-                <img src="images/loop_1_cube" align="middle" width="400px"/>
+                <img src="images/loop_1_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 1 Cube</figcaption>
             </td>
             <td>
-                <img src="images/loop_1_teapot" align="middle" width="400px"/>
+                <img src="images/loop_1_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 1 Teapot</figcaption>
             </td>
             <td>
-                <img src="images/loop_2_cube" align="middle" width="400px"/>
+                <img src="images/loop_2_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 2 Cube</figcaption>
             </td>
             <td>
-                <img src="images/loop_2_teapot" align="middle" width="400px"/>
+                <img src="images/loop_2_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 2 Teapot</figcaption>
             </td>
             <td>
-                <img src="images/loop_5_cube" align="middle" width="400px"/>
+                <img src="images/loop_5_cube.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 5 Cube</figcaption>
             </td>
             <td>
-                <img src="images/loop_5_teapot" align="middle" width="400px"/>
+                <img src="images/loop_5_teapot.png" align="middle" width="400px"/>
                 <figcaption align="middle">Loop Level 5 Teapot</figcaption>
             </td>
             </tr>
